UI: avoid vvTop shift

--- a/codoxear/static/app.css
+++ b/codoxear/static/app.css
@@ -59,7 +59,7 @@
         grid-template-columns: var(--sidebar-w) 1fr;
         grid-template-rows: 1fr;
         position: fixed;
-        top: var(--vvTop, 0px);
+        top: 0;
         left: 0;
         right: 0;
         width: 100vw;
